Added Import Activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,10 @@
         android:name=".scan_qr_code_activity">
     </activity>
 
+        <activity
+            android:name=".import_qr_code_activity">
+        </activity>
+
         <meta-data
             android:name="com.google.android.gms.ads.AD_MANAGER_APP"
             android:value="true" />
